--- a/index.html
+++ b/index.html
@@ -560,21 +560,7 @@ Add the following code as Maven repository to use QoCIM (in a POM file):</p>
 </div>
 </div>
 <div class="paragraph">
-<p>You can use many module from QoCIM framework as for example the main QoC model with the following code in your <code>pom.xml</code> file
-&lt;dependency&gt;
-  &lt;groupId&gt;qocim.criteria&lt;/groupId&gt;
-  &lt;artifactId&gt;precision&lt;/artifactId&gt;
-  &lt;version&gt;1.1.1&lt;/version&gt;
-&lt;/dependency&gt;
-  &lt;!-- QoCIM main model -&#8594;
-  &lt;dependency&gt;
-    &lt;groupId&gt;qocim&lt;/groupId&gt;
-    &lt;artifactId&gt;model&lt;/artifactId&gt;
-    &lt;version&gt;1.1.1&lt;/version&gt;
-  &lt;/dependency&gt;</p>
-</div>
-<div class="paragraph">
-<p>If you explore the precision criterion, you can use this dependency:</p>
+<p>You can use many module from QoCIM framework. For example, add the following code in your <code>pom.xml</code> file to get the main QoC model.</p>
 </div>
 <div class="literalblock">
 <div class="content">
@@ -582,11 +568,23 @@ Add the following code as Maven repository to use QoCIM (in a POM file):</p>
   &lt;groupId&gt;qocim.criteria&lt;/groupId&gt;
   &lt;artifactId&gt;precision&lt;/artifactId&gt;
   &lt;version&gt;1.1.1&lt;/version&gt;
-  &lt;/dependency&gt;</pre>
+&lt;/dependency&gt;</pre>
 </div>
 </div>
 <div class="paragraph">
-<p>All the packages are listed here: <a href="https://github.com/pierrick-marie?tab=packages&amp;repo_name=qocim" class="bare">https://github.com/pierrick-marie?tab=packages&amp;repo_name=qocim</a></p>
+<p>If you want to explore the precision criterion, you can use this dependency:</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>&lt;dependency&gt;
+  &lt;groupId&gt;qocim.criteria&lt;/groupId&gt;
+  &lt;artifactId&gt;precision&lt;/artifactId&gt;
+  &lt;version&gt;1.1.1&lt;/version&gt;
+&lt;/dependency&gt;</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>All the packages are listed <a href="https://github.com/pierrick-marie?tab=packages&amp;repo_name=qocim">here</a>.</p>
 </div>
 <div class="paragraph">
 <p>Because the packages are distributed on GitHub, you also need to configure the file <code>settings.xml</code> in your <code>$HOME/.m2/</code> folder with the following code:</p>
@@ -619,7 +617,7 @@ Add the following code as Maven repository to use QoCIM (in a POM file):</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-09-19 19:46:31 +0200
+Last updated 2022-09-19 19:51:53 +0200
 </div>
 </div>
 </body>
